--- a/.air.toml
+++ b/.air.toml
@@ -9,20 +9,20 @@ tmp_dir = "tmp"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "python-service"]
   exclude_file = []
-  exclude_regex = ["_test.go"]
+  exclude_regex = ["_test.go", "_templ.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html"]
+  include_ext = ["go", "tpl", "tmpl", "html", "templ"]
   include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
   poll = false
   poll_interval = 0
   post_cmd = []
-  pre_cmd = []
-  rerun = false
+  pre_cmd = ["templ generate && ./tailwindcss -i ./static/css/input.css -o ./static/css/styles.css"]
+  rerun = false 
   rerun_delay = 500
   send_interrupt = false
   stop_on_error = false
