--- a/python-service/requirements.txt
+++ b/python-service/requirements.txt
@@ -1,9 +1,13 @@
+blinker==1.8.2
 certifi==2024.6.2
 charset-normalizer==3.3.2
+click==8.1.7
 filelock==3.15.4
+Flask==3.0.3
 fsspec==2024.6.0
 huggingface-hub==0.23.4
 idna==3.7
+itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
 MarkupSafe==2.1.5
@@ -39,3 +43,4 @@ tqdm==4.66.4
 transformers==4.41.2
 typing_extensions==4.12.2
 urllib3==2.2.2
+Werkzeug==3.0.3
