--- a/python-service/requirements.txt
+++ b/python-service/requirements.txt
@@ -1,46 +1,51 @@
-blinker==1.8.2
-certifi==2024.6.2
-charset-normalizer==3.3.2
-click==8.1.7
-filelock==3.15.4
-Flask==3.0.3
-fsspec==2024.6.0
-huggingface-hub==0.23.4
-idna==3.7
+blinker==1.9.0
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.2.1
+filelock==3.18.0
+Flask==3.1.1
+fsspec==2025.7.0
+hf-xet==1.1.5
+huggingface-hub==0.34.1
+idna==3.10
 itsdangerous==2.2.0
-Jinja2==3.1.4
-joblib==1.4.2
-MarkupSafe==2.1.5
+Jinja2==3.1.6
+joblib==1.5.1
+MarkupSafe==3.0.2
 mpmath==1.3.0
-networkx==3.3
-numpy==2.0.0
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.5.40
-nvidia-nvtx-cu12==12.1.105
-packaging==24.1
-pillow==10.3.0
-PyYAML==6.0.1
-regex==2024.5.15
-requests==2.32.3
-safetensors==0.4.3
-scikit-learn==1.5.0
-scipy==1.13.1
-sentence-transformers==3.0.1
-sympy==1.12.1
-threadpoolctl==3.5.0
-tokenizers==0.19.1
-torch==2.3.1
-tqdm==4.66.4
-transformers==4.41.2
-typing_extensions==4.12.2
-urllib3==2.2.2
-Werkzeug==3.0.3
+networkx==3.5
+numpy==2.3.2
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+packaging==25.0
+pillow==11.3.0
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+safetensors==0.5.3
+scikit-learn==1.7.1
+scipy==1.16.0
+sentence-transformers==5.0.0
+setuptools==80.9.0
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.21.2
+torch==2.7.1
+tqdm==4.67.1
+transformers==4.54.0
+triton==3.3.1
+typing_extensions==4.14.1
+urllib3==2.5.0
+Werkzeug==3.1.3
